Resolves: tdf#101795 restore hiding on end of Gtk fpicker execute

but don't hide it at the end of every RunDialog::run so that the
dialog still exists and is visible if the "sure you want to overwrite"
dialog needs to be displayed

and restore the cui options stuff to its original state as well,
undoing the earlier efforts of...

commit c1bd3156cf66318023f36d81ce809a38072588e4
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Thu Jul 21 21:44:06 2016 +0100

    Resolves: tdf#101054 crash on options->path with non-native file picker

and

commit 3bbc0574d78d129359638b74612de2f93419eeb0
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Tue Jul 5 10:16:51 2016 +0100

    Resolves: rhbz#1352835 path options doesn't promptly destroy folder picker

Change-Id: I5d6bcee9fb0a73a95cc29e8f3f2ee2aea91a135a